--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -35,7 +35,6 @@
     <div class="icons">
       <a href="cart.html" aria-label="Shopping Cart">
         <i class="fas fa-shopping-cart cart-icon"></i>
-        <span id="cartCount" class="count">0</span>
       </a>
       <a href="profile.html" id="profileTrigger" aria-label="User Profile">
         <i class="fas fa-user user-icon"></i>
@@ -160,11 +159,11 @@
         <div class="footer-column">
           <h4>Policies</h4>
           <ul>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Shipping Policy</a></li>
-            <li><a href="#">Cancellation & Refund</a></li>
-            <li><a href="#">Return & Exchange</a></li>
+            <li><a href="policies.html#privacy">Privacy Policy</a></li>
+            <li><a href="policies.html#terms">Terms & Conditions</a></li>
+            <li><a href="policies.html#shipping">Shipping Policy</a></li>
+            <li><a href="policies.html#cancellation">Cancellation & Refund</a></li>
+            <li><a href="policies.html#return">Return & Exchange</a></li>
           </ul>
         </div>
 
