--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -26,13 +26,9 @@
     </div>
 
     <div class="header-actions">
-      <button class="action-btn">
+      <a href="cart.html" class="action-btn">
         <i class="fas fa-shopping-cart"></i>
-      </button>
-      <div class="divider"></div>
-      <button class="action-btn">
-        <i class="fas fa-user"></i>
-      </button>
+      </a>
     </div>
   </nav>
 
@@ -48,7 +44,8 @@
       <div class="profile-section">
         <div class="profile-info">
           <h3>John Doe</h3>
-          <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="dbb1b4b3b5f5bfb4be9bbea3bab6abb7bef5b8b4b6">[email&#160;protected]</a></p>
+          <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__"
+              data-cfemail="dbb1b4b3b5f5bfb4be9bbea3bab6abb7bef5b8b4b6">[email&#160;protected]</a></p>
         </div>
       </div>
     </div>
@@ -313,8 +310,7 @@
               </div>
               <div class="order-content">
                 <div class="product-preview">
-                  <img src="../static/products-img/p1.png" alt="Product"
-                    class="product-image">
+                  <img src="../static/products-img/p1.png" alt="Product" class="product-image">
                   <div class="product-details">
                     <h4>Premium Leather Handbag</h4>
                     <div class="product-meta">
@@ -356,8 +352,7 @@
               </div>
               <div class="order-content">
                 <div class="product-preview">
-                  <img src="../static/products-img/p2.png" alt="Product"
-                    class="product-image">
+                  <img src="../static/products-img/p2.png" alt="Product" class="product-image">
                   <div class="product-details">
                     <h4>Gourmet Spice Mix Set</h4>
                     <div class="product-meta">
@@ -532,7 +527,7 @@
             </div>
           </form>
         </div>
-        </div>
+      </div>
       </div>
     </section>
   </main>
