--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -298,11 +298,11 @@
         <div class="footer-column">
           <h4>Policies</h4>
           <ul>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
-            <li><a href="#">Shipping Policy</a></li>
-            <li><a href="#">Cancellation & Refund</a></li>
-            <li><a href="#">Return & Exchange</a></li>
+            <li><a href="policies.html#privacy">Privacy Policy</a></li>
+            <li><a href="policies.html#terms">Terms & Conditions</a></li>
+            <li><a href="policies.html#shipping">Shipping Policy</a></li>
+            <li><a href="policies.html#cancellation">Cancellation & Refund</a></li>
+            <li><a href="policies.html#return">Return & Exchange</a></li>
           </ul>
         </div>
 
@@ -448,7 +448,7 @@
             <label class="checkbox-wrapper">
               <input type="checkbox" id="agreeTerms" required>
               <span class="checkmark"></span>
-              I agree to the <a href="#" class="terms-link">Terms & Conditions</a>
+              I agree to the <a href="policies.html#terms" class="terms-link">Terms & Conditions</a>
             </label>
           </div>
 
