--- a/client/templates/cart.html
+++ b/client/templates/cart.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>BariFoods - Cart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="../static/css/product.css" />
   <link rel="stylesheet" href="../static/css/cart.css" />
 
