--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Account Management - Profile</title>
+  <link rel="icon" href="../static/img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="../static/css/profile.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link
