--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -12,8 +12,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-  <link rel="preload" as="image" href="/static/img/hero-img.png">
-  <link rel="preload" as="image" href="/static/img/bari.jpg">
+  <link rel="preload" as="image" href="../static/img/hero-img.png">
+  <link rel="preload" as="image" href="../static/img/bari.jpg">
 </head>
 
 <body>
@@ -58,16 +58,8 @@
         </p>
 
         <div class="hero-image">
-        <img src="../static/img/hero-img.png" alt="Bari Foods Model" loading="eager">
-        <!-- 
-        <div class="wave-decoration">
-          <img src="/static/img/hero-bottom.png" alt="Wave Design" loading="lazy">
+          <img src="../static/img/hero-img.png" alt="Bari Foods Model" loading="eager">
         </div>
-        <div class="camel-icon">
-          <img src="/static/img/camel.png" alt="Camel Icon" loading="lazy">
-        </div>
-        -->
-      </div>
 
         <div class="hero-buttons">
           <a href="#popular" class="btn-primary">
@@ -101,12 +93,12 @@
     <!-- Popular Products Section -->
     <section class="popular-section" id="popular-products-section">
       <img src="../static/img/top-right.png" alt="Decorative Corner" class="corner-img" loading="lazy" />
-      <img src="../static/img/left.png" alt="Decorative Corner" class="corner-img-second" loading="lazy" />      
+      <img src="../static/img/left.png" alt="Decorative Corner" class="corner-img-second" loading="lazy" />
 
       <div class="popular-headings">
         <h3 class="section-subtitle">CUSTOMER FAVORITES</h3>
         <h1 class="section-title">Popular Products</h1>
-        <p class="section-description">Handcrafted with love, seasoned with tradition  discover the flavors that keep
+        <p class="section-description">Handcrafted with love, seasoned with tradition discover the flavors that keep
           our customers coming back for more</p>
       </div>
 
@@ -162,9 +154,12 @@
       <div class="about-content">
         <h3>BARI FOODS LEGACY</h3>
         <h1>Tradition, Done Right</h1>
-        <p class="main-sub-heading">At <span class="highlight">Bari Foods,</span> our Premium Bhujia is made using traditional Rajasthani recipes and a disciplined, modern process. We start with carefully selected moth dal and whole spices, blended in precise proportions to preserve authentic flavor.</p>
-        <p class="history-sub-heading">Each batch is prepared using premium oil with 75% less usage, ensuring a crisp texture without excess greasiness. We avoid palm oil, preservatives, and unnecessary chemicals keeping the product clean, light, and honest.
-        
+        <p class="main-sub-heading">At <span class="highlight">Bari Foods,</span> our Premium Bhujia is made using
+          traditional Rajasthani recipes and a disciplined, modern process. We start with carefully selected moth dal
+          and whole spices, blended in precise proportions to preserve authentic flavor.</p>
+        <p class="history-sub-heading">Each batch is prepared using premium oil with 75% less usage, ensuring a crisp
+          texture without excess greasiness. We avoid palm oil, preservatives, and unnecessary chemicals keeping the
+          product clean, light, and honest.
         </p>
 
         <div class="tags">
@@ -255,7 +250,7 @@
             <i class="fa-solid fa-envelope"></i>
             Mail Us
           </a>
-          <a href="tel:+919582489966" class="btn-outline large">
+          <a href="tel:+919829288937" class="btn-outline large">
             <i class="fas fa-phone"></i>
             Call Us
           </a>
