--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -141,7 +141,9 @@
         <div class="footer-socials">
           <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/barifoodsofficial/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+          <a href="https://wa.me/919829288937?text=Hello%20Bari%20Foods%2C%20I%20want%20to%20place%20an%20order" target="_blank" aria-label="Chat on WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+          </a>
           <a href="https://www.youtube.com/@barifoodsofficial" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
